--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,10 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "TmdbAdapterConfiguration": {
-    "TmdbApiUrlBase": "https://api.themoviedb.org/3",
-    "TmdbApiKey": "1f54bd990f1cdfb230adb312546d765d",
-    "Idioma": "pt-BR"
+  "IMDbConfigurationModel": {
+    "Url": "https://api.themoviedb.org",
+    "ApiKey": "1f54bd990f1cdfb230adb312546d765d",
+    "Language": "pt-BR"
   },
   "MongoDbAdpterConfiguration": {
     "DefaultConnection": "mongodb+srv://jouberthandrade:XGKQgNOKJgJPTOh0@cluster0.zjth9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
